fix: overflowing warning text

--- a/src/index.css
+++ b/src/index.css
@@ -125,7 +125,7 @@ body {
 }
 
 .white-space-pre {
-  white-space: pre;
+  white-space: pre-wrap;
 }
 
 .panel-button {
